@@ -1,3 +1,8 @@
+ags (4.0.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed .gir include version identifier of Soup-3.0
+
 ags (4.0.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
